# asciidoctor-rs

./: Cargo.toml  README.adoc  README.md
src/: main.rs
